UPDATE Stylist alpha 45.0.1 ・Minor change

--- a/Stylist/Base.lproj/Main.storyboard
+++ b/Stylist/Base.lproj/Main.storyboard
@@ -1145,8 +1145,8 @@
     <inferredMetricsTieBreakers>
         <segue reference="vY9-8b-aib"/>
         <segue reference="HkD-ag-DXk"/>
-        <segue reference="qXM-AK-tWs"/>
-        <segue reference="XKH-ik-kmo"/>
+        <segue reference="j8y-ny-OAp"/>
+        <segue reference="xnA-Pc-bIb"/>
         <segue reference="ZON-hF-NJm"/>
     </inferredMetricsTieBreakers>
 </document>
