--- a/Stylist/Base.lproj/Main.storyboard
+++ b/Stylist/Base.lproj/Main.storyboard
@@ -728,9 +728,6 @@
                                                 <state key="normal" image="GoBackArrow">
                                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
-                                                <connections>
-                                                    <segue destination="Egg-uH-MRp" kind="unwind" unwindAction="unwindToTrend:" id="bPS-RQ-z9R"/>
-                                                </connections>
                                             </button>
                                         </subviews>
                                     </view>
@@ -768,7 +765,6 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xkg-aV-9EF" sceneMemberID="firstResponder"/>
-                <exit id="Egg-uH-MRp" userLabel="Exit" sceneMemberID="exit"/>
                 <panGestureRecognizer minimumNumberOfTouches="1" id="scS-AB-22V">
                     <connections>
                         <action selector="handlePan:" destination="Gk5-7l-8RI" id="kgc-Nt-RA5"/>
@@ -780,7 +776,7 @@
                     </connections>
                 </panGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="436" y="574"/>
+            <point key="canvasLocation" x="673" y="625"/>
         </scene>
         <!--Photo View Controller-->
         <scene sceneID="xGl-vL-tbG">
@@ -1115,16 +1111,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
                     </view>
                     <connections>
                         <segue destination="8vQ-e4-Iq2" kind="modal" identifier="trendDetailVCtoVC" animates="NO" id="35s-LQ-Ebd"/>
                         <segue destination="eCJ-iY-WXf" kind="unwind" identifier="trendDetailVCtoVCunwind" unwindAction="unwindToTrend:" id="SU4-Yv-nCL"/>
+                        <segue destination="Gk5-7l-8RI" kind="modal" identifier="trendDetailToSwipeableVC" id="t5G-Sf-RKd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jgz-A0-3Ud" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="eCJ-iY-WXf" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="716" y="2139"/>
+            <point key="canvasLocation" x="1132" y="2253"/>
         </scene>
     </scenes>
     <resources>
@@ -1145,8 +1143,9 @@
     <inferredMetricsTieBreakers>
         <segue reference="vY9-8b-aib"/>
         <segue reference="HkD-ag-DXk"/>
-        <segue reference="j8y-ny-OAp"/>
         <segue reference="xnA-Pc-bIb"/>
         <segue reference="ZON-hF-NJm"/>
+        <segue reference="t5G-Sf-RKd"/>
+        <segue reference="35s-LQ-Ebd"/>
     </inferredMetricsTieBreakers>
 </document>
